Use jbuilder, update openapi specs, add more seed data and tests
