# config/routes.rb
@@ -1,5 +1,5 @@
-require 'sidekiq_unique_jobs/web'
-require 'sidekiq/web'
+require "sidekiq_unique_jobs/web"
+require "sidekiq/web"
 
 Sidekiq::Web.use Rack::Auth::Basic do |username, password|
   ActiveSupport::SecurityUtils.secure_compare(::Digest::SHA256.hexdigest(username), ::Digest::SHA256.hexdigest(ENV["SIDEKIQ_USERNAME"])) &
@@ -7,14 +7,14 @@ Sidekiq::Web.use Rack::Auth::Basic do |username, password|
 end if Rails.env.production?
 
 Rails.application.routes.draw do
-  mount Rswag::Ui::Engine => '/docs'
-  mount Rswag::Api::Engine => '/docs'
+  mount Rswag::Ui::Engine => "/docs"
+  mount Rswag::Api::Engine => "/docs"
   mount Sidekiq::Web => "/sidekiq"
   mount PgHero::Engine, at: "pghero"
 
   namespace :api do
     namespace :v1 do
-      resources :funds, only: [:show] do
+      resources :funds, only: [:show], param: :slug do
         collection do
           get :search
         end
@@ -28,7 +28,7 @@ Rails.application.routes.draw do
       collection do
         get :github_sponsors
         get :github_sponsors_history
-        get 'github_sponsors/:date', action: :github_sponsors, as: :github_sponsors_dated, constraints: { date: /\d{4}-\d{2}-\d{2}/ }
+        get "github_sponsors/:date", action: :github_sponsors, as: :github_sponsors_dated, constraints: { date: /\d{4}-\d{2}-\d{2}/ }
       end
     end
     resources :events, only: [:index]
@@ -65,23 +65,23 @@ Rails.application.routes.draw do
 
   resources :projects, only: [:show]
 
-  get '/about', to: 'pages#about'
-  get '/faq', to: 'pages#faq'
-  get '/privacy', to: 'pages#privacy'
-  get '/overview', to: 'pages#overview'
-  get '/terms', to: 'pages#terms'
+  get "/about", to: "pages#about"
+  get "/faq", to: "pages#faq"
+  get "/privacy", to: "pages#privacy"
+  get "/overview", to: "pages#overview"
+  get "/terms", to: "pages#terms"
 
-  post '/webhooks', to: 'webhooks#receive'
+  post "/webhooks", to: "webhooks#receive"
 
-  get '/404', to: 'errors#not_found'
-  get '/422', to: 'errors#unprocessable'
-  get '/500', to: 'errors#internal'
-  get '/403', to: 'errors#forbidden'
-  get '/401', to: 'errors#unauthorized'
-  get '/400', to: 'errors#bad_request'
-  get '/409', to: 'errors#conflict'
-  get '/503', to: 'errors#service_unavailable'
-  get '/429', to: 'errors#too_many_requests'
+  get "/404", to: "errors#not_found"
+  get "/422", to: "errors#unprocessable"
+  get "/500", to: "errors#internal"
+  get "/403", to: "errors#forbidden"
+  get "/401", to: "errors#unauthorized"
+  get "/400", to: "errors#bad_request"
+  get "/409", to: "errors#conflict"
+  get "/503", to: "errors#service_unavailable"
+  get "/429", to: "errors#too_many_requests"
 
   root "funds#index"
 end
